fix: made login sessions more persistant (session hydration) - Previously sessions only lasted until the next refresh. - Now JWT auth tokens persist until set duration
M backend/routes/authRoutes.js
- Added /me route for user session behavior

M backend/controllers/authController.js
- Added getCurrentUser() to restore active session
- Implement .env variable instead of hard-coded time-out value.

M coffee/src/api.ts
- Implemented frontend api call for fetching current logon session

M coffee/src/App.css
M coffee/src/App.tsx
- Implemented session hydration using handleLogin()
- Uses new api calls to restore existing user session

M swagger.yml
- Added new api endpoint /api/auth/me
